# cmake_skeleton

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  bootstrap.sh  create_project.sh  index.html  params.json
data/: CMakeLists.txt  hello.desktop.in
doc/: CMakeLists.txt  Doxyfile.in  _authors.html  authors.dox  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  examples.dox  examples.html  files.html  globals.html  globals_func.html  group__math.html  group__private.html  group__toplevel.html  hello_8h.html  hello_8h_source.html  hello__private_8h_source.html  index.html  main.dox  modules.html  pages.html  test_8c-example.html
doc/html/: _authors.html  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  examples.html  files.html  globals.html  globals_func.html  group__math.html  group__toplevel.html  hello_8h.html  hello_8h_source.html  index.html  modules.html  pages.html  test_8c-example.html
doc/html/search/: all_68.js  functions_68.js  search.js
doc/search/: all_65.js  all_68.js  functions_68.js  groups_70.js  search.js
edje/: CMakeLists.txt  default.edc
examples/: CMakeLists.txt  test.c
lib/: CMakeLists.txt  hello.c  hello.h  hello.pc.in  hello_config.h.in  hello_private.h
